// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`combat scenarios (snapshot) > scenario 01: small raid — 5 interceptors vs empty planet 1`] = `
{
  "attackerLosses": {},
  "debris": {
    "minerai": 0,
    "silicium": 0,
  },
  "defenderLosses": {},
  "outcome": "attacker",
  "repairedDefenses": {},
  "roundsPlayed": 1,
  "totalArmorBlockedAttacker": 0,
  "totalArmorBlockedDefender": 0,
  "totalOverkillAttacker": 0,
  "totalOverkillDefender": 0,
  "totalShieldAbsorbedAttacker": 0,
  "totalShieldAbsorbedDefender": 0,
}
`;

exports[`combat scenarios (snapshot) > scenario 02: mirror match — 1 interceptor vs 1 interceptor 1`] = `
{
  "attackerLosses": {
    "interceptor": 1,
  },
  "debris": {
    "minerai": 1800,
    "silicium": 600,
  },
  "defenderLosses": {
    "interceptor": 1,
  },
  "outcome": "draw",
  "repairedDefenses": {},
  "roundsPlayed": 4,
  "totalArmorBlockedAttacker": 4,
  "totalArmorBlockedDefender": 4,
  "totalOverkillAttacker": 0,
  "totalOverkillDefender": 0,
  "totalShieldAbsorbedAttacker": 32,
  "totalShieldAbsorbedDefender": 32,
}
`;

exports[`combat scenarios (snapshot) > scenario 03: interceptor swarm vs frigate wall 1`] = `
{
  "attackerLosses": {},
  "debris": {
    "minerai": 7200,
    "silicium": 4800,
  },
  "defenderLosses": {
    "frigate": 4,
  },
  "outcome": "attacker",
  "repairedDefenses": {},
  "roundsPlayed": 2,
  "totalArmorBlockedAttacker": 11,
  "totalArmorBlockedDefender": 120,
  "totalOverkillAttacker": 0,
  "totalOverkillDefender": 0,
  "totalShieldAbsorbedAttacker": 144,
  "totalShieldAbsorbedDefender": 128,
}
`;

exports[`combat scenarios (snapshot) > scenario 04: cruiser sweep vs interceptor swarm 1`] = `
{
  "attackerLosses": {},
  "debris": {
    "minerai": 18000,
    "silicium": 6000,
  },
  "defenderLosses": {
    "interceptor": 20,
  },
  "outcome": "attacker",
  "repairedDefenses": {},
  "roundsPlayed": 4,
  "totalArmorBlockedAttacker": 261,
  "totalArmorBlockedDefender": 66,
  "totalOverkillAttacker": 241,
  "totalOverkillDefender": 0,
  "totalShieldAbsorbedAttacker": 324,
  "totalShieldAbsorbedDefender": 343,
}
`;

exports[`combat scenarios (snapshot) > scenario 05: battlecruisers vs frigates (counter expectation) 1`] = `
{
  "attackerLosses": {},
  "debris": {
    "minerai": 14400,
    "silicium": 9600,
  },
  "defenderLosses": {
    "frigate": 8,
  },
  "outcome": "attacker",
  "repairedDefenses": {},
  "roundsPlayed": 3,
  "totalArmorBlockedAttacker": 132,
  "totalArmorBlockedDefender": 52,
  "totalOverkillAttacker": 72,
  "totalOverkillDefender": 0,
  "totalShieldAbsorbedAttacker": 236,
  "totalShieldAbsorbedDefender": 266,
}
`;

exports[`combat scenarios (snapshot) > scenario 06: balanced mixed fleet vs balanced mixed fleet 1`] = `
{
  "attackerLosses": {
    "frigate": 3,
    "interceptor": 10,
  },
  "debris": {
    "minerai": 33000,
    "silicium": 14100,
  },
  "defenderLosses": {
    "cruiser": 1,
    "frigate": 2,
    "interceptor": 10,
  },
  "outcome": "draw",
  "repairedDefenses": {},
  "roundsPlayed": 4,
  "totalArmorBlockedAttacker": 125,
  "totalArmorBlockedDefender": 112,
  "totalOverkillAttacker": 43,
  "totalOverkillDefender": 18,
  "totalShieldAbsorbedAttacker": 533,
  "totalShieldAbsorbedDefender": 491,
}
`;

exports[`combat scenarios (snapshot) > scenario 07: defended planet (fleet + defenses + level 3 shield) 1`] = `
{
  "attackerLosses": {
    "cruiser": 4,
  },
  "debris": {
    "minerai": 31200,
    "silicium": 13200,
  },
  "defenderLosses": {
    "electromagneticCannon": 3,
    "frigate": 4,
    "rocketLauncher": 10,
  },
  "outcome": "attacker",
  "repairedDefenses": {
    "electromagneticCannon": 3,
    "rocketLauncher": 5,
  },
  "roundsPlayed": 4,
  "totalArmorBlockedAttacker": 97,
  "totalArmorBlockedDefender": 32,
  "totalOverkillAttacker": 333,
  "totalOverkillDefender": 46,
  "totalShieldAbsorbedAttacker": 564,
  "totalShieldAbsorbedDefender": 511,
}
`;

exports[`combat scenarios (snapshot) > scenario 08: small raid blocked by oversized planetary shield 1`] = `
{
  "attackerLosses": {
    "interceptor": 3,
  },
  "debris": {
    "minerai": 2700,
    "silicium": 900,
  },
  "defenderLosses": {},
  "outcome": "defender",
  "repairedDefenses": {},
  "roundsPlayed": 2,
  "totalArmorBlockedAttacker": 6,
  "totalArmorBlockedDefender": 0,
  "totalOverkillAttacker": 0,
  "totalOverkillDefender": 46,
  "totalShieldAbsorbedAttacker": 32,
  "totalShieldAbsorbedDefender": 48,
}
`;

exports[`combat scenarios (snapshot) > scenario 09: massive raid overwhelms small shield 1`] = `
{
  "attackerLosses": {},
  "debris": {
    "minerai": 0,
    "silicium": 0,
  },
  "defenderLosses": {
    "electromagneticCannon": 8,
  },
  "outcome": "attacker",
  "repairedDefenses": {
    "electromagneticCannon": 5,
  },
  "roundsPlayed": 1,
  "totalArmorBlockedAttacker": 18,
  "totalArmorBlockedDefender": 28,
  "totalOverkillAttacker": 131,
  "totalOverkillDefender": 0,
  "totalShieldAbsorbedAttacker": 200,
  "totalShieldAbsorbedDefender": 130,
}
`;

exports[`combat scenarios (snapshot) > scenario 10: overkill showcase — battlecruisers vs weak fleet 1`] = `
{
  "attackerLosses": {},
  "debris": {
    "minerai": 22500,
    "silicium": 7500,
  },
  "defenderLosses": {
    "interceptor": 25,
  },
  "outcome": "attacker",
  "repairedDefenses": {},
  "roundsPlayed": 3,
  "totalArmorBlockedAttacker": 24,
  "totalArmorBlockedDefender": 55,
  "totalOverkillAttacker": 683,
  "totalOverkillDefender": 0,
  "totalShieldAbsorbedAttacker": 496,
  "totalShieldAbsorbedDefender": 272,
}
`;

exports[`combat scenarios (snapshot) > scenario 11: late-game fight with researched fleets 1`] = `
{
  "attackerLosses": {
    "battlecruiser": 3,
    "cruiser": 5,
    "frigate": 10,
    "interceptor": 20,
  },
  "debris": {
    "minerai": 171900,
    "silicium": 69000,
  },
  "defenderLosses": {
    "battlecruiser": 2,
    "cruiser": 4,
    "frigate": 8,
    "rocketLauncher": 5,
  },
  "outcome": "defender",
  "repairedDefenses": {
    "rocketLauncher": 4,
  },
  "roundsPlayed": 4,
  "totalArmorBlockedAttacker": 460.5,
  "totalArmorBlockedDefender": 430.5,
  "totalOverkillAttacker": 376,
  "totalOverkillDefender": 619.4000000000001,
  "totalShieldAbsorbedAttacker": 1653.4,
  "totalShieldAbsorbedDefender": 1346,
}
`;

exports[`combat scenarios (snapshot) > scenario 12: support units survive when priority targets remain 1`] = `
{
  "attackerLosses": {},
  "debris": {
    "minerai": 10200,
    "silicium": 5400,
  },
  "defenderLosses": {
    "interceptor": 8,
    "smallCargo": 5,
  },
  "outcome": "draw",
  "repairedDefenses": {},
  "roundsPlayed": 4,
  "totalArmorBlockedAttacker": 42,
  "totalArmorBlockedDefender": 28,
  "totalOverkillAttacker": 184,
  "totalOverkillDefender": 0,
  "totalShieldAbsorbedAttacker": 154,
  "totalShieldAbsorbedDefender": 147,
}
`;
